# EMG_BLE

./: .gitignore  README.md  SparkFun_ADS122C04_ADC_Arduino_Library.h  ble_app_blinky_pca10056_s140.hex  emgBLE.ino
emg_esp_central_dongle/main/: CMakeLists.txt  Kconfig.projbuild  component.mk
emg_esp_central_dongle/main/include/App/: AppConfig.h  AppData.h  AppReturnStatus.h
emg_esp_central_dongle/main/include/Drivers/: HttpClientDriver.h  STMUsartDriver.h
emg_esp_central_dongle/main/include/Services/: BluetoothService.h  CalibrationProfileService.h  CryptoService.h  DebugProfileService.h  DeviceConfigProfileService.h  EspFotaService.h  GeneralInfoProfileService.h  HttpFileUploadService.h  HttpRequestService.h  MainUcService.h  NTPService.h  STMFotaService.h  TherapyProfileService.h  TrackPositionProfileService.h  WifiProvisionService.h  WirelessConnectionsProfileService.h
emg_esp_central_dongle/main/include/Tasks/: EspFotaTask.h  FileUploadTask.h  MainTask.h  STMFotaTask.h
emg_esp_central_dongle/main/include/Utils/: RingBufferUtils.h  TimerUtils.h  WeProtocolUtils.h
emg_esp_central_dongle/main/src/: CMakeLists.txt  main.cpp
emg_esp_central_dongle/main/src/App/: AppData.c
emg_esp_central_dongle/main/src/Drivers/: HttpClientDriver.c  STMUsartDriver.c
emg_esp_central_dongle/main/src/Services/: BluetoothService.c  CalibrationProfileService.c  CryptoService.c  DebugProfileService.c  DeviceConfigProfileService.c  EspFotaService.c  GeneralInfoProfileService.c  HttpFileUploadService.c  HttpRequestService.c  MainUcService.c  NTPService.c  STMFotaService.c  (+4 more)
(+117 files in other folders)
