idf_component_register(SRCS
"src/main.cpp"
"src/Services/BluetoothService.c"
"src/Services/CalibrationProfileService.c"
"src/Services/CryptoService.c"
"src/Services/DeviceConfigProfileService.c"
"src/Services/GeneralInfoProfileService.c"
"src/Services/NTPService.c"
"src/Services/TherapyProfileService.c"
"src/Services/TrackPositionProfileService.c"
"src/Services/DebugProfileService.c"
"src/Services/HttpFileUploadService.c"
"src/Services/WirelessConnectionsProfileService.c"
"src/Drivers/STMUsartDriver.c"
"src/Drivers/HttpClientDriver.c"
"src/Services/MainUcService.c"
"src/Services/HttpRequestService.c"
"src/Services/WifiProvisionService.c"
"src/Utils/TimerUtils.c"
"src/Utils/WeProtocolUtils.c"
"src/Utils/RingBufferUtils.c"
"src/Services/EspFotaService.c"
"src/Services/STMFotaService.c"
"src/Tasks/EspFotaTask.c"
"src/Tasks/MainTask.c"
"src/Tasks/STMFotaTask.c"
"src/Tasks/FileUploadTask.c"
"src/App/Appdata.c"
INCLUDE_DIRS "include"
EMBED_TXTFILES certs/drive_google_com.pem)
